k8s/postgresql-proxy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql-proxy
  namespace: staging-new-staging
  labels:
    app: postgresql-proxy
spec:
  containers:
  - name: postgres-proxy
    image: alpine/socat:latest
    args:
      - TCP-LISTEN:5432,fork,reuseaddr
      - TCP:hotcalls-staging-ne-postgres.postgres.database.azure.com:5432
    ports:
    - containerPort: 5432
      protocol: TCP
  restartPolicy: Always
